--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,13 @@ python = "^3.11"
 djhtml = "^3.0.6"
 
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.3.1"
+black = "^23.3.0"
+flake8 = "^6.0.0"
+mypy = "^1.3.0"
+isort = "^5.12.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
