--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,14 +2,13 @@
 name = "lkmlfmt-djhtml"
 version = "0.0.1"
 description = "a plugin for lkmlfmt"
-authors = ["Your Name <you@example.com>"]
+authors = ["kitta65 <skndr666m1@gmail.com>"]
 readme = "README.md"
 packages = [{include = "lkmlfmt_djhtml"}]
 
 [tool.poetry.dependencies]
 python = "^3.11"
 djhtml = "^3.0.6"
-
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.3.1"
