--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ black = "^23.3.0"
 flake8 = "^6.0.0"
 mypy = "^1.3.0"
 isort = "^5.12.0"
+lkmlfmt = "^0.0.7"
 
 [build-system]
 requires = ["poetry-core"]
